--- a/includes/binary_sensors.yaml
+++ b/includes/binary_sensors.yaml
@@ -3,7 +3,7 @@
     tom_in_meeting:
       friendly_name: "Is Tom in a Zoom/Teams meeting?"
       value_template: >-
-        "{{ is_state('binary_sensor.zoom_tombjss',"on") or is_state('sensor.teams_activity','In a call') }}"
+        "{{ is_state('binary_sensor.zoom_tombjss',"on")  }}"
       icon_template: >
         {% if is_state("binary_sensor.tom_in_meeting", "on") %}
           mdi:phone-in-talk
@@ -32,12 +32,3 @@
       friendly_name: Display card between 16:00 and 18:00.
       value_template: >
          {{ 16 <= now().hour < 18 }}
-- platform: workday
-  country: GB
-  province: England
-- platform: workday
-  name: workday_anna
-  excludes: [sat, sun, wed, holiday]
-  country: GB
-  province: England
-
