--- a/esphome/d1mini-motion-reuben.yaml
+++ b/esphome/d1mini-motion-reuben.yaml
@@ -10,7 +10,7 @@ wifi:
   
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "D1Mini Motion Pir Hotspot"
+    ssid: "${device_name}"
     password: !secret wifi_password
 
 substitutions:
