Added: Script to start casting of energy dashboard to google display Added: Expose casting of energy dashboard to google assistant

--- a/includes/google_assistant.yaml
+++ b/includes/google_assistant.yaml
@@ -110,3 +110,12 @@ entity_config:
       aliases:
         - "Solar light"
       expose: true
+    script.energy_dashboard:
+      expose: true
+      name: "Energy dashboard"
+      room: "Living room"
+      aliases:
+        - "Solar display"
+        - "Solar dashboard"
+        - "Energy display"
+        
