--- a/includes/template.yaml
+++ b/includes/template.yaml
@@ -192,6 +192,16 @@
       state: "{{ state_attr('sensor.solax_local_settings', 'Data')[2] | int(default=0) }}"
       unit_of_measurement: "%"
 
+### Battery settings charge/discharge (period 1) ###
+    - name: "Solax Local Battery Setting Start Charge"
+      state: "{{'%02d' % ((state_attr('sensor.solax_local_settings', 'Data')[3])%256 | int(default=0)) }}:{{'%02d' %((state_attr('sensor.solax_local_settings', 'Data')[3])/256) | int(default=0)}} "
+    - name: "Solax Local Battery Setting Stop Charge"
+      state: "{{'%02d' % ((state_attr('sensor.solax_local_settings', 'Data')[4])%256 | int(default=0)) }}:{{'%02d' % ((state_attr('sensor.solax_local_settings', 'Data')[4])/256) | int(default=0)}} "
+    - name: "Solax Local Battery Setting Start Discharge"
+      state: "{{'%02d' % ((state_attr('sensor.solax_local_settings', 'Data')[5])%256 | int(default=0)) }}:{{'%02d' % ((state_attr('sensor.solax_local_settings', 'Data')[5])/256) | int(default=0)}} "
+    - name: "Solax Local Battery Setting Stop Discharge"
+      state: "{{'%02d' % ((state_attr('sensor.solax_local_settings', 'Data')[6])%256 | int(default=0)) }}:{{ '%02d' % ((state_attr('sensor.solax_local_settings', 'Data')[6])/256) | int(default=0)}} "
+
 ### Estimated remaining energy ###
     - name: "Solax Local Battery Remain Energy"
       unique_id: solax_local_battery_kwh
