--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -410,8 +410,15 @@
   # 0 - Self Use Min SOC %
   # 1 - Self Use Charge from grid (0 for disabled, 1 for enabled)
   # 2 - Self Use Charge from grid to % 
-  value_template: "{{ '[' ~ value.split(',')[28] ~ ',' ~ value.split(',')[29] ~ ',' ~ value.split(',')[30] ~ ']' }}"
-  
+  # 3 - Forced charge start
+  # 4 - Forced charge end
+  # 5 - Allowed discharge start
+  # 6 - Allowed discharge end
+  # 7 - Charge/discharge Period2 Enabled (0 for disabled, 1 for enabled)
+  value_template: "{{ '[' ~ value.split(',')[28] ~ ',' ~ value.split(',')[29] ~ ',' ~ value.split(',')[30] ~ ',' ~ value.split(',')[36] ~ ',' ~ value.split(',')[37] ~ ',' ~ value.split(',')[38] ~ ',' ~ value.split(',')[39] ~ ',' ~ value.split(',')[40] ~ ']' }}"
+
+
+
 - platform: history_stats
   name: airer_run_time
   entity_id: switch.heated_airer
